--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,5 @@
-# Compiled class file
-*.class
-class/
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# package kamai_i.Files #
-*.jar
-!lib/**/*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Maven
+target/
 
 # Libraries
 .vscode/
